# reth-ddd

./: Cargo.toml  README.md
design/: trans-flow.md
src/app/client/consensus-client/: Cargo.toml
src/app/client/execution-client/: Cargo.toml
src/app/client/execution-client/design/: api.md  case.md  task.md
src/app/node/archive-node/: Cargo.toml
src/app/node/full-node/: Cargo.toml
src/app/node/light-node/: Cargo.toml
src/app/node/validator-node/: Cargo.toml
src/lib/core/: Cargo.toml  TESTING.md  rustfmt.toml
src/lib/core/examples/: blockchain_demo.rs  client.rs  server.rs  server2.rs
src/lib/core/src/: Block.rs  Blockchain.rs  lib.rs
src/lib/core/src/domain/: mod.rs  transaction.rs
