[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.11.0-rc.2"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.145"
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
